# talos-mcp

./: Cargo.toml  LICENSE  README.md  install.sh
.desloppify/: config.json  query.json  state-rust.json  state-rust.json.bak
.github/workflows/: ci.yml
src/: handlers.rs  lib.rs  main.rs  mcp.rs  tools.rs
tests/: integration_tests.rs
