[package]
name = "talos-mcp-server"
version = "1.0.0"
edition = "2021"
authors = ["5dlabs"]
description = "MCP server for Talos OS cluster management"
license = "MIT"

[lib]
name = "talos_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "talos-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
